--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ plugins:
 - jekyll-remote-theme
 
 # Site settings
-url: 'https://mydomain.com'
+url: 'https://landscape-ecohydrology.github.io/'
 baseurl: ''
 title: 'My website'
 description: 'This is my new website'
