--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ paginate_path: blog/page:num
 # Header nav
 navigation_header:
   Home: /
+  Research: /research/
   About: /about/
   Blog: /blog/
 
