--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ baseurl: ''
 title: 'Frederick Cheng'
 description: 'This is my new website'
 permalink: pretty
-logo: "https://www.gravatar.com/avatar/6c0377abcf4da91cdd35dea4554b2a4c?s=52"
+logo: "/assets/CornerName.PNG" # Site logo, also used in jekyll-seo-tag
 description: "Hello darkness my old friend"
 email: "fycheng@uwaterloo.ca"
 
