--- a/_config.yml
+++ b/_config.yml
@@ -8,30 +8,29 @@
 #                                                 /____/
 #
 # Title of your website
-title: 'Frederick Cheng'
+title: 'Feeling Responsive'
 
 # The slogan describes your website and is used on homepage in <title> and other important places
-slogan: 'Watershed Ecohydrology'
+slogan: 'A Flexible Theme for Jekyll'
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: 'Exploring the interaction between hydrology and biogeochemistry at landscape scales'
+description: '»Feeling Responsive« is a responsive theme for Jekyll based on the fabulous foundation framework with beautiful typography and a bright color palette.'
 
 # The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
 credits: '<p>Created with &hearts; by <a href="http://phlow.de/">Phlow</a> with <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> based on <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a>.</p>'
 
 # Main author of the website
 # See > authors.yml
-author: Fred Cheng
+author: phlow
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://landscape-ecohydrology.github.io'
-baseurl: '/landscape-ecohydrology'
+url: 'https://phlow.github.io'
+baseurl: '/feeling-responsive'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
-#improve_content: https://github.com/Phlow/feeling-responsive/edit/gh-pages
-improve_content: https://github.com/landscape-ecohydrology/feeling-responsive/edit/gh-pages
+improve_content: https://github.com/Phlow/feeling-responsive/edit/gh-pages
 
 # This URL points directly to the images directory making
 # things easier to link to images in posts and templates. It needs a slash at the end.
@@ -39,7 +38,7 @@ improve_content: https://github.com/landscape-ecohydrology/feeling-responsive/ed
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://landscape-ecohydrology.github.io/landscape-ecohydrology/images/'
+urlimg: 'https://phlow.github.io/feeling-responsive/images/'
 
 
 # Logo size is 600x80 pixels
@@ -194,8 +193,8 @@ og_type:                            'website'
 #
 
 socialmedia:
-    twitter: pHred_cheng
-    
+    twitter: phlow
+    facebook: phlow.media
 
 
 #        ____  _
@@ -271,4 +270,4 @@ asciidoctor:
   attributes:
     source-highlighter: coderay
     coderay-css: style
-icons: font
+    icons: font
