--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
-- title: Start
+- title: Frederick Cheng
   url: "/"
   side: left
 
-- title: Getting Started
-  url: "/getting-started/"
+- title: Publications
+  url: "/publications/"
   side: left
 
 - title: "Templates"
