--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,4 +1,4 @@
-# Author details
+﻿# Author details
 #
 # 1. Edit information below
 # 2. Change site author in config.yml
@@ -6,9 +6,9 @@
 #
 # Resource › http://blog.sorryapp.com/blogging-with-jekyll/2014/02/06/adding-authors-to-your-jekyll-site.html
 phlow: # replace this with your info
-  name: "Phlow"
+  name: "Frederick Cheng"
   siterole: "webmaster, developer, copywriter, designer"
   uri: http://phlow.de/
-  email:
-  twitter: "@phlow"
+  email: fycheng@uwaterloo.ca
+  twitter: "@pHred_cheng"
 # you can add more authors here
